# Rust-WASM-ReactTS---BioSim

backend/biosim/: Cargo.toml
backend/biosim/src/: animal.rs  biosim.rs  island.rs  landscape.rs  main.rs  util.rs
biosim/: package-lock.json  package.json
client/: package-lock.json  package.json
client/public/: result.json
client/src/: App.tsx
client/src/components/: LineChart.tsx  TempChart.tsx
web-backend/: Cargo.toml
