[package]
name = "biosim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
rand = "0.8.5"
probability = "0.15.5"
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.83"
getrandom = { version = "0.2", features = ["js"] }
plotters = "0.3"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
